Add PLFX Stack to things

--- a/app/things/page.mdx
+++ b/app/things/page.mdx
@@ -10,6 +10,10 @@ import {
 import { Badge } from "@/components/ui/badge"
 import { ProjectCard } from "./project-card"
 
+<ProjectCard title="PLFX Stack" link="https://github.com/panzacoder/plfx-stack" tags={['Nativewind', 'NextJS 14', 'Expo 50', 'Expo Router', 'Universal', 'Figma']}>
+  An open-source starter, based on my work at Family Care Circle. This is a new project that will be updated over time.
+</ProjectCard>
+
 <ProjectCard title="Family Care Circle" link="https://familycarecircle.com" tags={['Nativewind', 'NextJS 14', 'Expo 50', 'Expo Router', 'Universal', 'Figma']}>
   - Complete app redesign with design system establishment.
   - Rearchitect frontend code (web and native) to improve UX ability to iterate on functionality. From separate projects of framework-less React and React Native, to a monorepo with NextJS, Expo, Expo Router, Tailwind & Nativewind.
