content and style updates

--- a/app/things/page.mdx
+++ b/app/things/page.mdx
@@ -10,14 +10,30 @@ import {
 import { Badge } from "@/components/ui/badge"
 import { ProjectCard } from "./project-card"
 
-<ProjectCard title="PLFX Stack" link="https://github.com/panzacoder/plfx-stack" tags={['Nativewind', 'NextJS 14', 'Expo 50', 'Expo Router', 'Universal', 'Figma']}>
-  An open-source starter, based on my work at Family Care Circle. This is a new project that will be updated over time.
+<ProjectCard active title="Motiion" link="https://motiion.vercel.app" tags={['NextJS 14', 'Tailwind', 'Convex', 'Clerk Auth', 'PWA']}>
+  - App to help dancers create portfolios, connect with choreographers, and book gigs.
+  - Greenfield v1 build. 
+  - Deeply involved in product solutioning with the founders, architected and implemented full app.
+  - 7 week build from start to finish.
+  <br/>
+  [App Teaser](https://motiion.io)
 </ProjectCard>
 
-<ProjectCard title="Family Care Circle" link="https://familycarecircle.com" tags={['Nativewind', 'NextJS 14', 'Expo 50', 'Expo Router', 'Universal', 'Figma']}>
+<ProjectCard active title="Mississippi-Lousiana Assisted Living Association" link="https://www.mslala.org/content.asp?contentid=147" tags={['NextJS 14', 'Tailwind', 'OpenAI Assistants API', 'Embedded Apps']}>
+  - Custom AI Assistant app build, targeted for members to be able to do targeted research on member documents.
+  - Created a dashboard to allow the client to self-serve updates to configuration and review questions asked to plan educational programming.
+</ProjectCard>
+
+<ProjectCard active title="Family Care Circle" link="https://familycarecircle.app" tags={['Nativewind', 'NextJS 14', 'Expo 50', 'Expo Router', 'Universal', 'Figma']}>
   - Complete app redesign with design system establishment.
   - Rearchitect frontend code (web and native) to improve UX ability to iterate on functionality. From separate projects of framework-less React and React Native, to a monorepo with NextJS, Expo, Expo Router, Tailwind & Nativewind.
   - Redevelop business strategy for the next 12 months, focusing on monetization and narrowing in on a target vertical.
+  <br/>
+  [Pitch Deck](https://familycarecircle.app/pitch)
+</ProjectCard>
+
+<ProjectCard title="PLFX Stack" link="https://github.com/panzacoder/plfx-stack" tags={['Nativewind', 'NextJS 14', 'Expo 50', 'Expo Router', 'Universal', 'Figma']}>
+  An open-source starter, based on my work at Family Care Circle. This is a new project that will be updated over time.
 </ProjectCard>
 
 <ProjectCard title="PLFX Studio" link="https://plfx.studio" tags={['NextJS', 'MUI', 'Design', 'Netlify Forms']}>
@@ -29,7 +45,7 @@ import { ProjectCard } from "./project-card"
 
 <Lead className='pt-8'>As part of [Headway.io](https://headway.io)</Lead>
 
-<ProjectCard title="[Stealth E-commerce app]" tags={['NextJS 13', 'RSC', 'NestJS', 'Shopify', 'Prisma']}>
+<ProjectCard title="GoodDay Software" link='https://www.gooddaysoftware.com/' tags={['NextJS 13', 'RSC', 'NestJS', 'Shopify', 'Prisma']}>
   - Brought greenfield project from 0-1, assisting the client's first and second head of engineering in establishing app architecture and tooling. 
   - Solved novel problems (particularly around authentication) with Shopify's App Bridge API and NextJS Server Components.
   - Ensured the client could maintain productivity while pivoting on staffing 2 months into the project, seeing 100% turnover of in-house engineering team.
